button toggle and routes/controllers added

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-SERVER_URL = "http//192.168.1.58"
+MONGO_URI = mongodb+srv://Skyler86:GoodPassword@nodeexpressprojects.u6ip7.mongodb.net/Dosing-Pump?retryWrites=true&w=majority&appName=NodeExpressProjects
